Opened 17 years ago

Closed 17 years ago

#1445 closed bug (fixed)

Saved VICN attribute don't stick

Reported by: humdinger Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/Icon-O-Matic Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

A saved file should normally get its contents as its own icon. Sometimes that works with the first save of a newly created icon. Subsequent saves most of the time fail to write the VICN attribute. Or more to the point, the VICN attribute seems to be deleted right after it's written: Often you see the correct icon for a split second before it's replaced by the default icon. Additionally, when Tracker is in icon mode, the file jumps to another location with each save from Icon-O-Matic.

Change History (1)

comment:1 by stippi, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev22205.

Note: See TracTickets for help on using tickets.