* fixed two bugs related to #1445, on BeOS R5, BFS has a bug that prevents   attributes to be written under a certain name when they already exist under   the same name but with a different type * the code that did the saving to a temporary file, then copied the attributes   of the original file, then clobbered the original file prevented saving the   icon in the icon attribute reliably, disabled this code for now and added   TODO how it should work better

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22205 a95241bf-73f2-0310-859d-f6bbb57e9c96